# xmlro

./: CMakeLists.txt  LICENSE.MIT  README.md
include/xmlro/: element.h  xmlro.h
include/xmlro/detail/: xml_n_tree.h
src/: dummy.cpp
test/: CMakeLists.txt  compile_time_test.cpp  test.cpp
